feat: slides iniciais

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
   <head>
     <meta charset="utf-8" />
     <meta
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="dist/reset.css" />
     <link rel="stylesheet" href="dist/reveal.css" />
     <link rel="stylesheet" href="dist/theme/black.css" />
+    <link rel="stylesheet" href="slide-style.css" />
 
     <!-- Theme used for syntax highlighted code -->
     <link rel="stylesheet" href="plugin/highlight/monokai.css" />
@@ -19,8 +20,67 @@
   <body>
     <div class="reveal">
       <div class="slides">
-        <section>Slide 1</section>
-        <section>Slide 2</section>
+        <section>
+          <div class="apresentation-area">
+            <div class="apresentation-content">
+              <h3>Carlos Eduardo</h3>
+              <ul>
+                <li>Faço programas durante o período da noite</li>
+                <li>Professor quando necessário</li>
+                <li>Estudante 100% do tempo</li>
+              </ul>
+            </div>
+            <img src="assets/sanji-smoking.gif" alt="" />
+          </div>
+        </section>
+        <section>
+          <h3>Não eu não sou o sanji</h3>
+        </section>
+        <section>
+          <h3>A vida não é so react:</h3>
+          <h4>Criando uma aplicação com javaScript modularizado</h4>
+          <img src="assets/bebe-mais-maluco-ainda.gif" alt="Bebê dançando" />
+        </section>
+
+        <section>
+          <section><h4>O Ecossistema JavaScript</h4></section>
+          <section>
+            <img src="assets/js-ecossystem.png" alt="javascript ecossystem" />
+          </section>
+        </section>
+        <section>
+          <section>
+            <h4>Entrando mais a fundo</h4>
+            <ul>
+              <li>Como os frameworks e bibliotecas se organizam?</li>
+              <li>React exemplo:</li>
+              <pre><code data-trim data-noescape>
+                src/
+                ├── components/     # Componentes reutilizáveis
+                ├── screens/        # Páginas ou telas
+                ├── hooks/          # Hooks personalizados
+                ├── contexts/       # Contenxtos
+                ├── utils/          # Funções utilitárias
+                ├── app.jsx         # Entrada
+                └── main.jsx        # Ponto de entrada
+                  </code></pre>
+            </ul>
+          </section>
+          <section>
+            <img src="assets/caveira-maluca.gif" alt="caveira" />
+          </section>
+        </section>
+        <section>
+          <h4>JavaScript Modules</h4>
+          <ul>
+            <li>A importância da base bem fundamentada</li>
+            <li>Análise de Projeto</li>
+          </ul>
+        </section>
+        <section>
+          <h4>O que faremos hoje?</h4>
+          <h6><a href="https://linktree-bay-nine.vercel.app/">Linktree</a></h6>
+        </section>
       </div>
     </div>
 
