feat: último slide, e atta react exemplo

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               <pre><code data-trim data-noescape>
                 src/
                 ├── components/     # Componentes reutilizáveis
-                ├── screens/        # Páginas ou telas
+                ├── pages/          # Páginas ou telas
                 ├── hooks/          # Hooks personalizados
                 ├── contexts/       # Contenxtos
                 ├── utils/          # Funções utilitárias
@@ -80,6 +80,10 @@
         <section>
           <h4>O que faremos hoje?</h4>
           <h6><a href="https://linktree-bay-nine.vercel.app/">Linktree</a></h6>
+        </section>
+        <section>
+          <h3>Como dizia minha ex:</h3>
+          <h4>"O problema não é você, sou eu..."</h4>
         </section>
       </div>
     </div>
