feat: adicionando índice para a auala

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
     <div class="reveal">
       <div class="slides">
         <section>
+          <h3>A vida não é so react:</h3>
+          <h4>Criando uma aplicação com javaScript modularizado</h4>
+          <img src="assets/bebe-mais-maluco-ainda.gif" alt="Bebê dançando" />
+        </section>
+        <section>
           <div class="apresentation-area">
             <div class="apresentation-content">
               <h3>Carlos Eduardo</h3>
@@ -37,9 +42,16 @@
           <h3>Não eu não sou o sanji</h3>
         </section>
         <section>
-          <h3>A vida não é so react:</h3>
-          <h4>Criando uma aplicação com javaScript modularizado</h4>
-          <img src="assets/bebe-mais-maluco-ainda.gif" alt="Bebê dançando" />
+          <h3>O que veremos hoje?</h3>
+          <ul>
+            <li>Entendendo um pouco do ecossistema javascript</li>
+            <li>
+              Explorando a organização padrão de bibliotecas muito utilizadas:
+              React
+            </li>
+            <li>Entendendo a utilização do JavaScript Modules</li>
+            <li>Aplicando modularização na prática</li>
+          </ul>
         </section>
 
         <section>
@@ -53,8 +65,8 @@
             <h4>Entrando mais a fundo</h4>
             <ul>
               <li>Como os frameworks e bibliotecas se organizam?</li>
-              <li>React exemplo:</li>
-              <pre><code data-trim data-noescape>
+              <li class="fragment">React exemplo:</li>
+              <pre class="fragment"><code data-trim data-noescape>
                 src/
                 ├── components/     # Componentes reutilizáveis
                 ├── pages/          # Páginas ou telas
@@ -73,8 +85,8 @@
         <section>
           <h4>JavaScript Modules</h4>
           <ul>
-            <li>A importância da base bem fundamentada</li>
-            <li>Análise de Projeto</li>
+            <li class="fragment">A importância da base bem fundamentada</li>
+            <li class="fragment">Análise de Projeto</li>
           </ul>
         </section>
         <section>
@@ -83,7 +95,7 @@
         </section>
         <section>
           <h3>Como dizia minha ex:</h3>
-          <h4>"O problema não é você, sou eu..."</h4>
+          <h4 class="fragment">"O problema não é você, sou eu..."</h4>
         </section>
       </div>
     </div>
